
[build-system]
requires = ["setuptools", "versioneer[toml]", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "satEDA"
description = "satEDA"
authors = [
    { name = "Sebastien Allgeyer", email = "sebastien.allgeyer@gmail.com" }
]
dynamic = ["version", "dependencies"]




[project.scripts]
"ginan_mq" = "sateda.scripts.ginan_mq:main"
"ginan_clocks" = "sateda.scripts.ginan_clocks:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[options]
package_dir="src"
exclude="tests/"
packages="find"


[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "_version.py"
parentdir_prefix = ""

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["src"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'